tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/us-west-1/ec2-describe-internet-gateways.json
{
    "InternetGateways": [
        {
            "Attachments": [
                {
                    "State": "available",
                    "VpcId": "vpc-3e2aca58"
                }
            ],
            "InternetGatewayId": "igw-c452b4a3",
            "OwnerId": "167389268608",
            "Tags": []
        }
    ]
}
