tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/us-west-1/ec2-describe-route-tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-b39425ca",
                    "RouteTableId": "rtb-7efb6418"
                }
            ],
            "OwnerId": "167389268608",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-7efb6418",
            "Routes": [
                {
                    "DestinationCidrBlock": "6.168.104.159/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "172.227.123.61/0",
                    "GatewayId": "igw-c452b4a3",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-3e2aca58"
        }
    ]
}
